<resources>
    <string name="app_name">BookingNow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login  screen string Res   -->
    <string name="button_login_text">Войти</string>
    <string name="button_Register_text">Зарегестрироваться</string>

    <!--Bottom navigation Res-->

    <string name="home_menu">Home</string>
    <string name="profile_menu">Settings</string>
    <string name="favorite_menu">Favorite</string>

    <string name="hederTitle">BookingNow</string>
    <string name="headerTitle2">Find your..</string>
    <string name="SearchViewHint">Просто напишите</string>
    <string name="SearchViewHintFavorite">Найти избранный номер</string>

    <string name="Booking_room">ЗАБРОНИРОВАТЬ</string>

    <string name="added_to_favorite_text">Добавлено в избранное</string>
    <string name="remove_from_favorite_text">Удалено из избранного</string>
    <string name="text_arrow_back">Назад</string>

    <string name="profile_text">Мой профиль</string>

    <string name="name_hint">Имя</string>
    <string name="address_hint">E-mail</string>
    <string name="phone_hint">Телефон</string>
    <string name="password_hint">Пароль</string>
    <string name="button_confirm">Подтвердить изменения</string>

    <string name="select_photo_text">Выбрать фото</string>
    <string name="add_text">Добавить</string>

    <string name="add_header_fragment">Добавить номер</string>

    <string name="name_of_room_text">Название номера</string>
    <string name="important_info_text">Главная информация</string>
    <string name="description_text">Описание</string>
    <string name="count_of_room_text">Колличество комнат</string>
    <string name="special_of_room_text">Особенности размещения</string>
    <string name="type_of_room_text">Тип номера</string>
    <string name="cost_of_room_text">Стоимость</string>


    <string name="first_visit_text">В первый раз?</string>
    <string name="continue_like_guest">Продолжить как гость ></string>



</resources>