<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4507D1"
    tools:context=".view.fragments.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/room_description_info_container_background">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/arialroundedmtbold"
            android:text="@string/profile_text"
            android:textColor="#480CCF"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/LinearLayout"
            app:layout_constraintTop_toBottomOf="@id/TextView">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="left"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/ImageViewProfileFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/roma_img" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/SelectImageButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="left|bottom"
                android:layout_marginLeft="85dp"
                android:layout_marginBottom="25dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/camera_icon" />

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="150dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/name_hint" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:background="@null" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/address_hint" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_margin="6dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/phone_hint" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:background="@null" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/password_hint" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:background="@null" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonConfirmChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/teal_200"
                android:fontFamily="@font/arialroundedmtbold"
                android:text="@string/button_confirm" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>